--- a/SignalR-Chat/public/index.html
+++ b/SignalR-Chat/public/index.html
@@ -7,6 +7,12 @@
 <body ng-controller="mainController" ng-app="SignalR-Chat">
 
 	<h1>Hi!</h1>
+
+	<ng-form ng-model="message">
+		<label>Message:</label><br />
+		<input type="text" ng-model="message.text" /> <button ng-click="sendMessage()">Wyślij</button>
+	</ng-form>
+	
 	<script src="../Scripts/jquery-1.6.4.min.js"></script>
 	<script src="../Scripts/jquery.signalR-2.2.2.min.js"></script>
 	<script src="../signalr/js"></script>
